--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -14,8 +14,6 @@
         position: sticky;
         top: 0;
         z-index: 1;
-
-        background-color: var(--background-color-dark);
     }
 
     .app-nav {
